--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
+<html>
+  <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="index.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <title>phonegap & jquery mobile boilerplate</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <link rel="stylesheet"  href="css/jquery.mobile.structure.css" />
+  <link rel="stylesheet" href="css/jquery.mobile.theme.css" />
+  
+  <script>
+    var userAgent = navigator.userAgent + '';
+    if (userAgent.indexOf('iPhone') > -1) {
+      document.write('<script src="js/lib/cordova-iphone.js"></sc' + 'ript>');
+      var mobile_system = 'iphone';
+    } else if (userAgent.indexOf('Android') > -1) {
+      document.write('<script src="js/lib/cordova-android.js"></sc' + 'ript>');
+      var mobile_system = 'android';
+    } else {
+      var mobile_system = '';
+    }
+  </script>
+  
+  <script src="js/lib/jquery.js"></script>
+  <!-- your scripts here -->
+  <script src="js/app/app.js"></script>
+  <script src="js/app/bootstrap.js"></script>
+  <script src="js/lib/jquery.mobile.js"></script>
 
-  <style></style>
-</head>
+  </head>
+
+<body>
+<div data-role="page">
+<div data-role="header">
+        <h1>Single page</h1>
+    </div><!-- /header -->
+
+    <div data-role="footer">
+        <h4>Footer content</h4>
+    </div><!-- /footer -->
+
+</div><!-- /page -->
+  </body>
+</html>
 
 
-
-<body class="body">
+<!-- <body class="body">
+<link rel="stylesheet" type="text/css" href="index.css">
 <div class="container-fluid">
     <div class ="col-md-12">
     <div class="col-md-2">
@@ -34,7 +64,7 @@
   </div>
 
       <!-- Login / Register Modal-->
-                        <div class="modal fade login-register-form" style="font-family: serif" role="dialog">
+                        <!-- <div class="modal fade login-register-form" style="font-family: serif" role="dialog">
                             <div class="modal-dialog modal-sm">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -102,4 +132,5 @@ $(document).ready(function(){
 </script>
 
 </body>
-</html>
+</html> -->
+ -->
