mobile rendering smaller button

--- a/index.html
+++ b/index.html
@@ -41,21 +41,20 @@
     </div><!-- /header -->
 
     <div class="container-fluid">
-    <div class ="col-md-12">
-    <div class="col-md-2">
-    </div>
-
-  <div class="col-md-8 reg-div" id="reg">
-    <div class="col-md-2">
-    </div>
-    <div class="col-md-8">
-      <div class="enforcer-border">
-        <p> Enforcer </p>
+    <div class = "row">
+    <!-- <div class="col-md-2">
+    </div> -->
+  <div class="col-md-12 reg-div" id="reg">
+    <!-- <div class="col-md-2">
+    </div> -->
+    <div>
+      <div class="enforcer-border" style="text-align: center;">
+        <h1> Enforcer </h1>
       </div>
-      <a class="btn btn-primary btn-lg reg-page" href="#" data-toggle="modal" data-target=".login-register-form">Click Here to Login or Register </a>
+      <a class="btn btn-primary btn-sm reg-page" href="#" data-toggle="modal" data-target=".login-register-form">Click Here to Login or Register </a>
     </div>
-  <div class="col-md-2">
-  </div>
+<!--   <div class="col-md-2">
+  </div> -->
   </div>
 
       <!-- Login / Register Modal-->
