--- a/report.html
+++ b/report.html
@@ -22,17 +22,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#">Enforcer</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
+      <!-- <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
-      </ul>
+      </ul> -->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#" data-toggle="modal" data-target=".login-register-form"><span></span>Login as Admin</a></li>
       </ul>
     </div>
   </div>
@@ -63,7 +63,6 @@
           <h3>Send us an image</h3>
         </div>      
       </div>
-   
 
     <div class="item">
         <img src="reportimage3.jpg" alt="Image">
@@ -75,6 +74,7 @@
       </div>
     </div>
 
+
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -85,7 +85,44 @@
       <span class="sr-only">Next</span>
     </a>
 </div>
-  
+
+      <!-- Login / Register Modal-->
+                        <div class="modal fade login-register-form" style="font-family:serif;" role="dialog">
+                            <div class="modal-dialog modal-sm">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <ul class="nav nav-tabs">
+                                            <li><a data-toggle="tab" href="#login-form"> Login </a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="tab-content">
+                                            <div id="login-form" class="tab-pane fade in active">
+                                                <form >
+                                                    <div class="form-group">
+                                                        <label for="email">Email:</label>
+                                                        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label for="phone">Phone:</label>
+                                                        <input type="phone" class="form-control" id="pwd" placeholder="Enter phone number" name="pwd">
+                                                    </div>
+                                                    <div class="checkbox">
+                                                        <label><input type="checkbox" name="remember"> Remember me</label>
+                                                    </div>
+                                                    <button type="button" onclick="login();" class="btn btn-info">Login</button>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a type="submit" class="btn btn-primary btn-block" data-dismiss="modal" >Close</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+<!-- report an incident -->  
 <div class="container text-center">  
 <br></br>
 <br></br>  
@@ -96,8 +133,12 @@
       <p>Current Project</p>
     </div>
     <div class="col-sm-6"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      <p>Project 2</p>    
+    <form>
+    <div class="form-group">
+      <label for="comment">Please give further information about the incident:</label>
+      <textarea class="form-control" rows="8" id="comment"></textarea>
+    </div>
+    </form>    
     </div>
   </div>
 </div><br>
@@ -107,11 +148,6 @@
 
 
 
-
-
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
-</footer>
 
 
 <script type="text/javascript">
@@ -139,6 +175,24 @@ document.getElementById("snap").addEventListener("click", function() {
 });
 
 
+function login() {
+  var val1 = $('#email').val();
+  var val2 = $('#pwd').val();
+
+ $.ajax({
+  type: 'POST',
+  url: 'login.php',
+  data: {email: val1, pwd: val2},
+  success: function(response) {
+    if (response == "success"){
+      window.location.assign("admin.html");
+    }
+    else{
+      alert(response);
+    }
+  }
+ });
+}
 
 </script>
 
